Bug 476970 - While already in Panel Edit Mode, right-clicking on panel again and choosing "Exit Edit Mode" does not exit Edit Mode
Summary: While already in Panel Edit Mode, right-clicking on panel again and choosing ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 477811 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-14 00:47 UTC by Nicolas Fella
Modified: 2024-03-05 15:24 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video (571.59 KB, video/webm)
2023-11-14 00:49 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-11-14 00:47:10 UTC
SUMMARY
See video

STEPS TO REPRODUCE
1. Right-click on default-ish panel
2. Click "Enter edit mode"
3. Right click again
4. Click "Edit edit mode"

OBSERVED RESULT
The panel config popup closes, but the panel is still in edit mode, indicated by the blue stuff around the panel
Right-clicking again still shows "Exit edit mode", clicking that *opens* the panel config popup again.
The only ways to properly exit edit mode are pressing Esc or the close button in the desktop toolbox 

EXPECTED RESULT
"Exit edit mode" exits edit mode

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.6

ADDITIONAL INFORMATION
Wayland
Comment 1 Nicolas Fella 2023-11-14 00:49:23 UTC
Created attachment 163136 [details]
Video
Comment 2 fanzhuyifan 2023-11-14 06:38:04 UTC
Can confirm on master (wayland)
Comment 3 Nate Graham 2023-11-14 22:50:45 UTC
Can reproduce. I'm not sure this is the intended UX though. When you're already in Edit Mode you're supposed to click the close button on the toolbar that drops down from the top of the screen. I had never thought to right-click on the Panel again while already in Edit Mode!
Comment 4 Nate Graham 2023-12-01 15:40:11 UTC
*** Bug 477811 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2023-12-01 15:53:02 UTC
Git commit 8b035a68561f500dc900156ccb2983ca344054b1 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 01/12/2023 at 16:52.
Pushed by ngraham into branch 'master'.

Make Panel context menu's "Exit Edit Mode" item actually exit Edit Mode

M  +1    -0    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8b035a68561f500dc900156ccb2983ca344054b1