Make Panel context menu's "Exit Edit Mode" item actually exit Edit Mode

BUG: 476970